--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -70,19 +70,16 @@ jobs:
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
           export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export BUILD_NUMBER=0
           export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
         else
-          export VERSION_NUMBER=${{ github.event.inputs.version }}
-          export BUILD_NUMBER=${{ github.event.inputs.build }}
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
-            export GIT_TAG="release_${VERSION_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}
           else
-            export GIT_TAG="release_${VERSION_NUMBER}-${BUILD_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}-${{ github.event.inputs.build }}
           fi
+          export GIT_TAG="release_${VERSION_NUMBER}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=build_number::${BUILD_NUMBER}"
         echo "::set-output name=version_string::${GIT_TAG}"
 
     - name: Build Package
@@ -91,35 +88,16 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
-        BUILD_NUMBER: ${{ steps.version.outputs.build_number }}
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
       with:
-        tag_name: ${{ steps.version.outputs.version_string }}
-        release_name: ${{ steps.version.outputs.version_string }}
-        body: |
-          Auto-generated periodic build.
-        draft: false
-        prerelease: false
-
-    - name: Upload Package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        # This action doesn't seem to support a glob so we need the exact name.
-        asset_path: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
-        asset_name: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
-        asset_content_type: application/x-gzip
+        name: linux-tarball
+        path: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
 
   ###########################################################################
   # Mac tarball with x86-64 build:
-  osx-x86-64:
+  osx:
     runs-on: macos-10.15
 
     steps:
@@ -139,19 +117,16 @@ jobs:
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
           export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export BUILD_NUMBER=0
           export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
         else
-          export VERSION_NUMBER=${{ github.event.inputs.version }}
-          export BUILD_NUMBER=${{ github.event.inputs.build }}
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
-            export GIT_TAG="release_${VERSION_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}
           else
-            export GIT_TAG="release_${VERSION_NUMBER}-${BUILD_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}-${{ github.event.inputs.build }}
           fi
+          export GIT_TAG="release_${VERSION_NUMBER}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=build_number::${BUILD_NUMBER}"
         echo "::set-output name=version_string::${GIT_TAG}"
 
     - name: Build Package
@@ -160,33 +135,14 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
-        BUILD_NUMBER: ${{ steps.version.outputs.build_number }}
         # See ci-osx.yml comments: we need to set the xcode version.
         DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
       with:
-        tag_name: ${{ steps.version.outputs.version_string }}
-        release_name: ${{ steps.version.outputs.version_string }}
-        body: |
-          Auto-generated periodic build.
-        draft: false
-        prerelease: false
-
-    - name: Upload Package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        # This action doesn't seem to support a glob so we need the exact name.
-        asset_path: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
-        asset_name: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
-        asset_content_type: application/x-gzip
+        name: mac-tarball
+        path: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
 
   ###########################################################################
   # Windows .zip and .msi with 32-bit and 64-bit x86 builds:
@@ -214,23 +170,21 @@ jobs:
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
           export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export BUILD_NUMBER=0
           export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
         else
-          export VERSION_NUMBER=${{ github.event.inputs.version }}
-          export BUILD_NUMBER=${{ github.event.inputs.build }}
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
-            export GIT_TAG="release_${VERSION_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}
           else
-            export GIT_TAG="release_${VERSION_NUMBER}-${BUILD_NUMBER}"
+            export VERSION_NUMBER=${{ github.event.inputs.version }}-${{ github.event.inputs.build }}
           fi
+          export GIT_TAG="release_${VERSION_NUMBER}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=build_number::${BUILD_NUMBER}"
         echo "::set-output name=version_string::${GIT_TAG}"
 
     - name: Build Package
       working-directory: ${{ github.workspace }}
+      shell: cmd
       run: |
         echo ------ Setting up paths ------
         7z x c:\projects\install\ninja.zip -oc:\projects\install\ninja > nul
@@ -247,7 +201,49 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
-        BUILD_NUMBER: ${{ steps.version.outputs.build_number }}
+
+    - name: Upload Zip
+      uses: actions/upload-artifact@v2
+      with:
+        name: windows-zip
+        path: DrMemory-Windows-${{ steps.version.outputs.version_number }}.zip
+
+    - name: Upload Msi
+      uses: actions/upload-artifact@v2
+      with:
+        name: windows-msi
+        path: DrMemory-Windows-${{ steps.version.outputs.version_number }}.msi
+
+  ###########################################################################
+  # Create release and populate with files.
+  # We can't have each OS job create the release because only the first
+  # succeeds and the others fail: there is no check in the create-release
+  # action to use an existing release if it already exists.
+  # Thus, our strategy is to share files from the build jobs with this
+  # single relese job via artifacts.
+
+  create_release:
+    needs: [x86, osx, windows]
+    runs-on: ubuntu-16.04
+
+    steps:
+    - name: Get Version
+      id: version
+      # XXX: See x86 job comments on sharing the default ver# with CMakeLists.txt.
+      run: |
+        if test -z "${{ github.event.inputs.version }}"; then
+          export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
+          export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
+        else
+          if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
+            export VERSION_NUMBER=${{ github.event.inputs.version }}
+          else
+            export VERSION_NUMBER=${{ github.event.inputs.version }}-${{ github.event.inputs.build }}
+          fi
+          export GIT_TAG="release_${VERSION_NUMBER}"
+        fi
+        echo "::set-output name=version_number::${VERSION_NUMBER}"
+        echo "::set-output name=version_string::${GIT_TAG}"
 
     - name: Create Release
       id: create_release
@@ -262,6 +258,40 @@ jobs:
         draft: false
         prerelease: false
 
+    - name: Download Linux
+      uses: actions/download-artifact@v2
+      with:
+        name: linux-tarball
+    - name: Upload Linux
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        # This action doesn't seem to support a glob so we need the exact name.
+        asset_path: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
+        asset_name: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
+        asset_content_type: application/x-gzip
+
+    - name: Download Mac
+      uses: actions/download-artifact@v2
+      with:
+        name: mac-tarball
+    - name: Upload Mac
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        # This action doesn't seem to support a glob so we need the exact name.
+        asset_path: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
+        asset_name: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
+        asset_content_type: application/x-gzip
+
+    - name: Download Zip
+      uses: actions/download-artifact@v2
+      with:
+        name: windows-zip
     - name: Upload Zip
       uses: actions/upload-release-asset@v1
       env:
@@ -273,6 +303,10 @@ jobs:
         asset_name: DrMemory-Windows-${{ steps.version.outputs.version_number }}.zip
         asset_content_type: application/zip
 
+    - name: Download Msi
+      uses: actions/download-artifact@v2
+      with:
+        name: windows-msi
     - name: Upload Msi
       uses: actions/upload-release-asset@v1
       env:
