i#2323 GA CI: Deploy docs when posting a new release
Adds a step to the Linux package job to deploy the html documentation
to our Github Pages docs site.

Fixes: #2323

--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -95,6 +95,16 @@ jobs:
         name: linux-tarball
         path: DrMemory-Linux-${{ steps.version.outputs.version_number }}.tar.gz
 
+    - name: Deploy Docs
+      uses: JamesIves/github-pages-deploy-action@3.7.1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        FOLDER: html
+        REPOSITORY_NAME: DynamoRIO/drmemory_docs
+        BRANCH: master
+        # Automatically remove deleted files from the deploy branch.
+        CLEAN: true
+
   ###########################################################################
   # Mac tarball with x86-64 build:
   osx:
