Set DEPLOY_DOCS env var so runsuite_wrapper will pass copy_docs to package.cmake which will make a top-level html/ dir

--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -88,6 +88,7 @@ jobs:
       env:
         CI_TARGET: package
         VERSION_NUMBER: ${{ steps.version.outputs.version_number }}
+        DEPLOY_DOCS: yes
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
