Use a token with privileges to write to the drmemory_docs repo

--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Deploy Docs
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ACCESS_TOKEN: ${{ secrets.DOCS_TOKEN }}
         FOLDER: html
         REPOSITORY_NAME: DynamoRIO/drmemory_docs
         BRANCH: master
