--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -69,8 +69,8 @@ jobs:
       # We only use a non-zero build # when making multiple manual builds in one day.
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
-          export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
+          export VERSION_NUMBER="2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
+          export GIT_TAG="cronbuild-${VERSION_NUMBER}"
         else
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
             export VERSION_NUMBER=${{ github.event.inputs.version }}
@@ -127,8 +127,10 @@ jobs:
       # XXX: See x86 job comments on sharing the default ver# with CMakeLists.txt.
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
-          export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
+          export PATCHLEVEL=$((`git log -n 1 --format=%ct` / (60*60*24)))
+          export PATCHLEVEL=$(((PATCHLEVEL %200) + 56))
+          export VERSION_NUMBER="2.3.${PATCHLEVEL}"
+          export GIT_TAG="cronbuild-${VERSION_NUMBER}"
         else
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
             export VERSION_NUMBER=${{ github.event.inputs.version }}
@@ -180,8 +182,8 @@ jobs:
       # XXX: See x86 job comments on sharing the default ver# with CMakeLists.txt.
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
-          export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
+          export VERSION_NUMBER="2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
+          export GIT_TAG="cronbuild-${VERSION_NUMBER}"
         else
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
             export VERSION_NUMBER=${{ github.event.inputs.version }}
@@ -243,8 +245,11 @@ jobs:
       # XXX: See x86 job comments on sharing the default ver# with CMakeLists.txt.
       run: |
         if test -z "${{ github.event.inputs.version }}"; then
-          export VERSION_NUMBER=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export GIT_TAG="cronbuild-2.3.${VERSION_NUMBER}"
+          export VERSION_NUMBER="2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
+          export GIT_TAG="cronbuild-${VERSION_NUMBER}"
+          export OSX_PATCHLEVEL=$((`git log -n 1 --format=%ct` / (60*60*24)))
+          export OSX_PATCHLEVEL=$(((OSX_PATCHLEVEL %200) + 56))
+          export OSX_VERSION_NUMBER="2.3.${OSX_PATCHLEVEL}"
         else
           if [ "${{ github.event.inputs.build }}" -eq 0 ]; then
             export VERSION_NUMBER=${{ github.event.inputs.version }}
@@ -254,6 +259,7 @@ jobs:
           export GIT_TAG="release_${VERSION_NUMBER}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
+        echo "::set-output name=osx_version_number::${OSX_VERSION_NUMBER}"
         echo "::set-output name=version_string::${GIT_TAG}"
 
     - name: Create Release
@@ -295,8 +301,8 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         # This action doesn't seem to support a glob so we need the exact name.
-        asset_path: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
-        asset_name: DrMemory-MacOS-${{ steps.version.outputs.version_number }}.tar.gz
+        asset_path: DrMemory-MacOS-${{ steps.version.outputs.osx_version_number }}.tar.gz
+        asset_name: DrMemory-MacOS-${{ steps.version.outputs.osx_version_number }}.tar.gz
         asset_content_type: application/x-gzip
 
     - name: Download Zip
